# mcp-wikidata

./: .env.example  CONFIGURATION.md  LICENSE  README.md  SPECIFICATIONS.md  claude_desktop_launcher.py  debug_args.sh  debug_claude_desktop.sh  debug_mcp.py  direct_launcher.py  install.sh  main.py  mcp_wikidata_launcher.py  pyproject.toml  run_mcp_wikidata.sh  test_claude_config.py  test_claude_desktop.py  test_connection.py  test_manual.py  test_mcp_client.py  troubleshoot_claude.md
mcp_wikidata/: __init__.py  config.py  server.py  tools.py  wikidata_client.py
tests/: __init__.py
